--- a/Year-2/Computational-math/Makefile
+++ b/Year-2/Computational-math/Makefile
@@ -4,8 +4,12 @@
 run:
 	python3 src/main.py
 
+test:
+	python3 src/test.py
+
 clean:
 	find . -type d -name "*__pycache__" -exec rm -rf {} +
 
 pack:
 	zip computational-math.zip -r *
+
