--- a/Year-2/Methods-and-means-of-software-engineering/lab-4/pom.xml
+++ b/Year-2/Methods-and-means-of-software-engineering/lab-4/pom.xml
@@ -28,7 +28,6 @@
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -44,9 +43,14 @@
         </dependency>
         <!-- JSF API -->
         <dependency>
-            <groupId>javax.faces</groupId>
-            <artifactId>javax.faces-api</artifactId>
-            <version>2.3</version>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.2.20</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+            <version>2.2.20</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.primefaces/primefaces -->
@@ -54,11 +58,6 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>11.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <version>2.0.SP1</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
