ai: (lab-2) Just writing simple parser with static type checks

--- a/Year-3/Artificial-intelligence/lab-2/Makefile
+++ b/Year-3/Artificial-intelligence/lab-2/Makefile
@@ -3,7 +3,8 @@ NAME := exec
 CXX = g++
 LD = $(CXX)
 
-CXXFLAGS = $(strip $(file < compile_flags.txt)) -g
+CXXFLAGS.debug = $(strip $(file < compile_flags.txt)) -g
+CXXFLAGS = $(CXXFLAGS.debug)
 LDFLAGS = $(CXXFLAGS)
 
 RM = rm -rf
