--- a/Year-3/Artificial-intelligence/lab-3/requirements.txt
+++ b/Year-3/Artificial-intelligence/lab-3/requirements.txt
@@ -1,6 +1,14 @@
+contourpy
+cycler
+fonttools
 joblib
+kiwisolver
+matplotlib
 numpy
+packaging
 pandas
+Pillow
+pyparsing
 python-dateutil
 pytz
 scikit-learn
