--- a/Year-3/Operating-systems/lab-2/src/Makefile
+++ b/Year-3/Operating-systems/lab-2/src/Makefile
@@ -2,10 +2,22 @@ KDIR=/home/nikit/data/kernel/linux-6.0
 BUILD_KDIR=$(KDIR)/build
 BUILD_DIR=$(PWD)/build
 
-obj-m += us_ioctlmod.o
+MODNAME=ioctlmod
+
+obj-m += $(MODNAME).o
+
+all: default export
 
 default:
 	make -C $(KDIR) O=$(BUILD_KDIR) M=$(BUILD_DIR) src=$(PWD) modules
 
 clean:
 	make -C $(KDIR) O=$(BUILD_KDIR) M=$(BUILD_DIR) src=$(PWD) clean
+	rm -rf $(BUILD_DIR)
+
+VM_ADDRESS=nikit@127.0.0.1
+VM_PORT=3122
+VM_PATH=/home/nikit/data/linux/
+
+export:
+	scp -P $(VM_PORT) $(BUILD_DIR)/$(MODNAME).ko $(VM_ADDRESS):$(VM_PATH)
