--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,17 @@ jobs:
 
       - name: Pip install
         run: |
-          python3 -m pip install coverage pycodestyle pylint pytest
+          pip install -r requirements.txt
 
-      - name: Test
+      - name: Test-example
         run: |
-          coverage run -m pytest --verbose
-          find . -type f -name "*.py" | xargs -t python3 -m coverage report
-          find . -type f -name "*.py" | xargs -t python3 -m pycodestyle --ignore=E501
-          find . -type f -name "*.py" | xargs -t python3 -m pylint
+          cd src/example
+            coverage run -m pytest --verbose
+            find . -type f -name "*.py" | xargs -t python3 -m coverage report
+            find . -type f -name "*.py" | xargs -t python3 -m pycodestyle --ignore=E501
+            find . -type f -name "*.py" | xargs -t python3 -m pylint
+            pwd
+
+      - name: Test-pwd
+        run: pwd
 
